--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
   </section>
 
     <footer class="meta">
-      <p>Note: Escape(C), Delete(CE)</p>
+      <p>Windows 11</p>
       </footer>
   </main>
 
